--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Debug R Packages
 Version: 1.0.0
 Author: Gábor Csárdi
 Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
-Description: Specify debug messages as special string constants, and control debugging of
-  packages via environment variables.
+Description: Specify debug messages as special string constants, and
+    control debugging of packages via environment variables.
 License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/gaborcsardi/debugme
@@ -12,3 +12,4 @@ BugReports: https://github.com/gaborcsardi/debugme/issues
 RoxygenNote: 5.0.1.9000
 Suggests: 
     testthat
+Encoding: UTF-8
