--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,9 @@ LazyData: true
 URL: https://github.com/gaborcsardi/debugme
 BugReports: https://github.com/gaborcsardi/debugme/issues
 RoxygenNote: 5.0.1.9000
+Roxygen: list(markdown = TRUE)
+Imports: 
+    crayon
 Suggests: 
     testthat
 Encoding: UTF-8
