Need to suggest covr for code coverage on Travis

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ RoxygenNote: 5.0.1.9000
 Roxygen: list(markdown = TRUE)
 Imports: 
     crayon
-Suggests: 
+Suggests:
+    covr,
     testthat
 Encoding: UTF-8
