Import grDevices for colors()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ BugReports: https://github.com/gaborcsardi/debugme/issues
 RoxygenNote: 5.0.1.9000
 Roxygen: list(markdown = TRUE)
 Imports: 
-    crayon
+    crayon,
+    grDevices
 Suggests:
     covr,
     testthat
