--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: debugme
 Title: Debug R Packages
-Version: 1.0.1
+Version: 1.0.2
 Author: Gábor Csárdi
 Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
 Description: Specify debug messages as special string constants, and
@@ -16,6 +16,7 @@ Imports:
     grDevices
 Suggests:
     covr,
+    mockery,
     testthat,
     withr
 Encoding: UTF-8
