--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,12 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/r-lib/debugme#readme
 BugReports: https://github.com/r-lib/debugme/issues
-RoxygenNote: 5.0.1.9000
+RoxygenNote: 5.0.1
 Roxygen: list(markdown = TRUE)
-Imports: 
+Imports:
     crayon,
-    grDevices
+    grDevices,
+    utils
 Suggests:
     covr,
     mockery,
