--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: debugme
 Title: Debug R Packages
 Version: 1.1.0.9001
-Author: Gábor Csárdi
-Maintainer: Gábor Csárdi <csardi.gabor@gmail.com>
+Authors@R: 
+    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre"))
 Description: Specify debug messages as special string constants, and
     control debugging of packages via environment variables.
 License: MIT + file LICENSE
