--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Specify debug messages as special string constants, and
     control debugging of packages via environment variables.
 License: MIT + file LICENSE
 LazyData: true
-URL: https://github.com/r-lib/debugme#readme
+URL: https://github.com/r-lib/debugme#readme, https://r-lib.github.io/debugme/
 BugReports: https://github.com/r-lib/debugme/issues
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
@@ -21,3 +21,4 @@ Suggests:
     testthat,
     withr
 Encoding: UTF-8
+Config/Needs/website: tidyverse/tidytemplate
