--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,9 @@ url: https://r-lib.github.io/debugme/
 template:
   bootstrap: 5
 
+  includes:
+    in_header: |
+      <script defer data-domain="r-lib.github.io/debugme,all.tidyverse.org" src="https://plausible.io/js/plausible.js"></script>  
+      
+development:
+  mode: auto
