Add Posit as author

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: debugme
 Title: Debug R Packages
 Version: 1.1.0.9001
-Authors@R: 
-    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre"))
+Authors@R: c(
+    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre")),
+    person("Posit Software, PBC", role = c("cph", "fnd"))
+    )
 Description: Specify debug messages as special string constants, and
     control debugging of packages via environment variables.
 License: MIT + file LICENSE
