--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,15 @@ Version: 1.1.0.9001
 Authors@R: c(
     person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre")),
     person("Posit Software, PBC", role = c("cph", "fnd"))
-    )
+  )
 Description: Specify debug messages as special string constants, and
     control debugging of packages via environment variables.
 License: MIT + file LICENSE
-LazyData: true
-URL: https://github.com/r-lib/debugme#readme, https://r-lib.github.io/debugme/
+URL: https://github.com/r-lib/debugme#readme,
+    https://r-lib.github.io/debugme/
 BugReports: https://github.com/r-lib/debugme/issues
-RoxygenNote: 7.2.3
-Roxygen: list(markdown = TRUE)
+Depends: 
+    R (>= 3.6)
 Imports:
     crayon,
     grDevices
@@ -22,8 +22,9 @@ Suggests:
     R6,
     testthat (>= 3.0.0),
     withr
-Encoding: UTF-8
 Config/Needs/website: tidyverse/tidytemplate
 Config/testthat/edition: 3
-Depends: 
-    R (>= 3.6)
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
